# tribrid-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EPSTEIN_DEMO_IMPLEMENTATION.md  OVERNIGHT_PROMPT.md  README.md  TODO.md  docker-compose.yml  mkdocs.yml  package-lock.json  playwright.config.ts  playwright.exhaustive.config.ts  pyproject.toml  ragweld-handoff.md  start.sh  tri_brid_rag_chat_2 (1).md  tribrid_config.json
.claude/: ralph-loop.sh  settings.json
.claude/hooks/: guards.json  verify-tribrid.sh
.claude/rules/: mlx-reranker.md  prompts-api.md  pydantic-first.md  terminology.md  testing.md  typescript-types.md
.github/workflows/: ci.yml  deploy-docs.yml  docs-automation.yml  sync-ragweld.yml
.internaldocs/: HANDOFF.md
CLEANUP_PLANS/: legacy_modules_ledger.md  web_dir_audit.md
CROSS-ENCODER-IMPLEMENTATION/: README.md  mlx_cross_encoder.py  requirements.txt
data/: glossary.json  models.json
docs/: index.md
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: index.md  tech-debt-tracker.md
docs/references/: index.md
infra/: alertmanager.yml  docker-compose.dev.yml  loki-config.yml  prometheus.yml  promtail-config.yml  repos.docker.json
latest/: 404.html  index.html  sitemap.xml
latest/api/: index.html
latest/api_extra/: index.html
latest/api_graph/: index.html
latest/api_health/: index.html
latest/api_indexing/: index.html
latest/api_models/: index.html
latest/api_models_chat/: index.html
latest/api_models_eval/: index.html
latest/api_models_extra/: index.html
latest/api_models_reranker/: index.html
scripts/: analyze_index.py  benchmark_perf.py  check_banned.py  create_eval_dataset.py  debug_ast.py  eval_reranker.py  generate_glossary.py  generate_types.py  grafana_dash.py  mine_triplets.py  print_codex_model.py  promote_reranker.py  prompt_router.py  quick_setup.py  seed_training_logs.py  split_epstein_csv.py  test_backend.py  train_reranker.py  validate_glossary.py  validate_types.py
server/: ARCHITECTURE.md  config.py  main.py
site/: 404.html  index.html  sitemap.xml
spec/: README.md
tests/: __init__.py  conftest.py
tmp/: last_train_start.json  metrics_faxbot__20260205_004634.json  run_faxbot__20260205_004634.json
web/: index.html  package-lock.json  package.json  tailwind.config.ts  test-dev-status.html  tsconfig.json  vite.config.ts
(+691 files in other folders)
